# Reduction_Optimization

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: reduction.h
src/: 10_reduction_warp_sync.cu  1_reduction_shared.cu  2_reduction_sequential.cu  3_grid_stride_loop.cu  4_unroll_last_warp.cu  5_unroll_loop.cu  6_reduction_vectorized.cu  7_reduction_prefetch.cu  8_reduction_completely_unroll.cu  9_reduction_tuning.cu
